Implemented camera and minimap.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 	<!-- Library code -->
 		
-		
+		<script type="text/javascript" src="minimap.js"></script>
+		<script type="text/javascript" src="camera.js"></script>
 	 	
 	<!-- Game code -->
 
