Combined grid with camera and minimap.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 
 	<!-- Library code -->
 		
+		<script type="text/javascript" src="helper.js"></script>
+		
 		<script type="text/javascript" src="minimap.js"></script>
 		<script type="text/javascript" src="camera.js"></script>
+		<script type="text/javascript" src="hexgrid.js"></script>
+		
+		<script type="text/javascript" src="main.js"></script>
 	 	
 	<!-- Game code -->
 
