--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script type="text/javascript" src="minimap.js"></script>
 		<script type="text/javascript" src="camera.js"></script>
 		<script type="text/javascript" src="hexgrid.js"></script>
+		<script type="text/javascript" src="unit.js"></script>
 		
 		<script type="text/javascript" src="main.js"></script>
 	 	
