--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<link href="index.css" media="screen" rel="stylesheet" type="text/css">
 
 	<!-- Library code -->
+			 	
+        	<!-- Notice the URL, this is handled by socket.io on the server automatically, via express -->
+		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 		
 		<script type="text/javascript" src="helper.js"></script>
 		
@@ -16,8 +19,10 @@
 		<script type="text/javascript" src="hexgrid.js"></script>
 		<script type="text/javascript" src="unit.js"></script>
 		
-		<script type="text/javascript" src="main.js"></script>
-	 	
+		<script type="text/javascript" src="game.core.client.js"></script>
+
+
+ 
 	<!-- Game code -->
 
 		
