--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		<script type="text/javascript" src="hexgrid.js"></script>
 		<script type="text/javascript" src="unit.js"></script>
 
+		<script type="text/javascript" src="terrain.js"></script>
 		<script type="text/javascript" src="game.core.client.js"></script>
 	</body>
 
