--- a/index.html
+++ b/index.html
@@ -17,11 +17,65 @@
 	</head>
 
 	<body>
+    
 		<!-- <canvas id="gameCanvas">
 		</canvas> -->
 		<div id="container"></div>
+        <div id="startMenu"><table width="200" border="1" align="center">
+  <tr>
+    <td>Enemy Unknown</td>
+    </tr>
+  <tr>
+    <td><button onclick="selectLevel()">Start!</button></td>
+  </tr>
+  <tr>
+    <td><button onclick="">High Score</button></td>
+  </tr>
+  <tr>
+    <td><button onclick="">How to Play</button></td>
+    </tr>
+</table>
+</div>
+        <div id="levelMenu"><table width="200" border="1" align="center">
+  <tr>
+    <td>Enemy Unknown</td>
+    </tr>
+  <tr>
+    <td>Senario:<select name="senario">
+      <option>Tutorial</option>
+      <option>Slayer</option>
+      <option>Capture the Flag</option>
+    </select></td>
+  </tr>
+  <tr>
+    <td>Type:<select name="type">
+      <option>1vs1</option>
+    </select></td>
+  </tr>
+  <tr>
+    <td><button onclick="start()">Start!</button></td>
+    </tr>
+</table>
+</div>
+</div>
+        <div id="endGameMenu"><table width="200" border="1" align="center">
+  <tr>
+    <td>Enemy Unknown</td>
+    </tr>
+  <tr>
+    <td><</td>
+  </tr>
+  <tr>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    </tr>
+</table>
+</div>
 		
 		<!-- Game code -->
+<script type="text/javascript" src="menu.js"></script>
 	
 		<script type="text/javascript" src="helper.js"></script>
 		
