--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
     <td>Enemy Unknown</td>
     </tr>
   <tr>
-    <td>Senario:<select name="senario">
-      <option>Tutorial</option>
-      <option>Slayer</option>
-      <option>Capture the Flag</option>
+    <td>Senario:<select name="senario" id="senario">
+      <option value="0">Tutorial</option>
+      <option value="1">Slayer</option>
+      <option value="2">Capture the Flag</option>
     </select></td>
   </tr>
   <tr>
-    <td>Type:<select name="type">
-      <option>1vs1</option>
+    <td>Type:<select name="type" id="type">
+      <option value="0">1vs1</option>
     </select></td>
   </tr>
   <tr>
