Changed map from hard-coded to JSON.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 	</head>
 
 	<body>
-		<!-- <canvas id="gameCanvas">
-		</canvas> -->
+		
 		<div id="container"></div>
 		
 		<!-- Game code -->
 	
 		<script type="text/javascript" src="helper.js"></script>
+		<script type="text/javascript" src="scenarios.js"></script>
 		
 		<script type="text/javascript" src="minimap.js"></script>
 		<script type="text/javascript" src="camera.js"></script>
