--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 	      </tr>
 		  <tr>
 			<td>Senario:&nbsp;<select name="scenario" id="scenario">
-			  <option value="0">Slayer</option>
+			  <option value="slayer">Slayer</option>
 			  <option value="tutorial_1">Tutorial</option>
-			  <option value="2">Capture the Flag</option>
+			  <option value="captureflag">Capture the Flag</option>
 			</select></td>
 		  </tr>
           		  <tr>
