--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 			  <option value="slayer">Slayer</option>
 			  <option value="tutorial_1">Tutorial</option>
 			  <option value="captureflag">Capture the Flag</option>
+			  <option value="vampirehunter">Vampire Hunter</option>
+			  <option value="zombieisbetter">Zombie is King</option>
+			  <option value="rockpapersissors">Rock Paper Sissors</option>
+			  <option value="warzone">War Zone</option>
 			</select></td>
 		  </tr>
           		  <tr>
