--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 		
 		<script type="text/javascript" src="lib/kinetic-v4.3.3.js"></script>
+        <script type="text/javascript" src="lib/soundmanager2.js"></script>
+		
 	<script src="SpryAssets/SpryAccordion.js" type="text/javascript"></script>
     <link href="SpryAssets/SpryAccordion.css" rel="stylesheet" type="text/css">
 </head>
