--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
 		<!-- Load style sheet -->
 		<link href="index.css" media="screen" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="/lib/flashblock.css">
 
 		<!-- Library code -->
 			 	
@@ -149,6 +150,9 @@
 			</tr>
 		</table>
 		</div>
+        <div id="sm2-container" class="sm2_debug movieContainer swf_loaded">
+		<embed name="sm2movie" id="sm2movie" src="/lib/soundmanager2_debug.swf" quality="high" allowscriptaccess="always" bgcolor="#ffffff" pluginspage="www.macromedia.com/go/getflashplayer" title="JS/Flash audio component (SoundManager 2)" type="application/x-shockwave-flash" haspriority="true">
+    	</div>
 				
 				<!-- Game code -->
 	<script type="text/javascript" src="menu.js"></script>
