--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
           		  <tr>
 		    <td align="center">&nbsp;</td>
 	      </tr>
-		  <tr>
-			<td>Type:&nbsp;<select name="type" class="option" id="type">
-			  <option value="0">1vs1</option>
-			</select></td>
-		  </tr>
+                    		  <tr>
+		    <td align="center">Games waiting for players:<br>
+            <textarea name="" cols="30" rows="3" id="lobby" style="resize:none" readonly> </textarea>
+            </td>
+	      </tr>
           		  <tr>
 		    <td align="center">&nbsp;</td>
 	      </tr>
