JS mobile calls.

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 				
 				<!-- Game code -->
 	<script type="text/javascript" src="menu.js"></script>
-	
+    <script type="text/javascript" src="lobby.client.mobile.js"></script>
+	<script type="text/javascript" src="helper.client.mobile.js"></script>
 		<script type="text/javascript" src="helper.js"></script>
 		<script type="text/javascript" src="scenarios.js"></script>
-		
 		<script type="text/javascript" src="minimap.js"></script>
 		<script type="text/javascript" src="camera.js"></script>
 		<script type="text/javascript" src="hexgrid.js"></script>
