Hexgrid and server changes

--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
 				
 				<!-- Game code -->
 		<script type="text/javascript" src="menu.js"></script>
-        <script type="text/javascript" src="menu.js"></script>
 		<script type="text/javascript" src="shared/game.shared.helper.js"></script>
 		<script type="text/javascript" src="shared/game.shared.scenarios.js"></script>
-		<script type="text/javascript" src="client/game.client.minimap.js"></script>
-		<script type="text/javascript" src="client/game.client.camera.js"></script>
-		<script type="text/javascript" src="shared/game.shared.hexgrid.js"></script>
+        <script type="text/javascript" src="shared/game.shared.hexgrid.js"></script>
 		<script type="text/javascript" src="shared/game.shared.unit.js"></script>
 		<script type="text/javascript" src="shared/game.shared.terrain.js"></script>
+		<script type="text/javascript" src="client/game.client.minimap.js"></script>
+		<script type="text/javascript" src="client/game.client.camera.js"></script>
+        <script type="text/javascript" src="client/game.client.hexgrid.js"></script>
 		<script type="text/javascript" src="client/game.client.js"></script>
     	<script type="text/javascript">
 		var howToPlay = new Spry.Widget.Accordion("howToPlay");
