Put all UI Layer animation into a separate file, and tried some optimization (only update visible hexagons, stop camera animation when it is not moving), but no significant perf boost.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 		<script type="text/javascript" src="unit.js"></script>
 
 		<script type="text/javascript" src="terrain.js"></script>
+        <script type="text/javascript" src="animation.js"></script>
 		<script type="text/javascript" src="game.core.client.js"></script>
     <script type="text/javascript">
 var howToPlay = new Spry.Widget.Accordion("howToPlay");
