--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Notice the URL, this is handled by socket.io on the server automatically, via express -->
 		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 		
-		<script type="text/javascript" src="lib/kinetic-v4.3.3.js"></script>
+		<script type="text/javascript" src="lib/kinetic-v4.7.4.min.js"></script>
         <script type="text/javascript" src="lib/soundmanager2.js"></script>
 		
 	<script src="SpryAssets/SpryAccordion.js" type="text/javascript"></script>
@@ -149,10 +149,7 @@
 			<td align="center"><button class="button" onclick=" ">High Scores</button></td>
 			</tr>
 		</table>
-		</div>
-        <div id="sm2-container" class="sm2_debug movieContainer swf_loaded">
-		<embed name="sm2movie" id="sm2movie" src="/lib/soundmanager2_debug.swf" quality="high" allowscriptaccess="always" bgcolor="#ffffff" pluginspage="www.macromedia.com/go/getflashplayer" title="JS/Flash audio component (SoundManager 2)" type="application/x-shockwave-flash" haspriority="true">
-    	</div>
+		
 				
 				<!-- Game code -->
 	<script type="text/javascript" src="menu.js"></script>
