client hexgrid changes

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <script type="text/javascript" src="shared/game.shared.hexgrid.js"></script>
 		<script type="text/javascript" src="shared/game.shared.unit.js"></script>
 		<script type="text/javascript" src="shared/game.shared.terrain.js"></script>
-		<script type="text/javascript" src="client/game.client.minimap.js"></script>
-		<script type="text/javascript" src="client/game.client.camera.js"></script>
+        <script type="text/javascript" src="client/game.client.ui.js"></script>
+		<script type="text/javascript" src="client/game.client.ui.minimap.js"></script>
+		<script type="text/javascript" src="client/game.client.ui.camera.js"></script>
         <script type="text/javascript" src="client/game.client.hexgrid.js"></script>
 		<script type="text/javascript" src="client/game.client.js"></script>
         
