--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         <script type="text/javascript" src="shared/game.shared.hexgrid.js"></script>
 		<script type="text/javascript" src="shared/game.shared.unit.js"></script>
 		<script type="text/javascript" src="shared/game.shared.terrain.js"></script>
+        <script type="text/javascript" src="client/game.client.js"></script>
         <script type="text/javascript" src="client/game.client.ui.js"></script>
 		<script type="text/javascript" src="client/game.client.ui.minimap.js"></script>
 		<script type="text/javascript" src="client/game.client.ui.camera.js"></script>
         <script type="text/javascript" src="client/game.client.hexgrid.js"></script>
-		<script type="text/javascript" src="client/game.client.js"></script>
+        <script type="text/javascript" src="client/game.client.sound.js"></script>
+		
         
 	</head>
 
