client unit created

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<script type="text/javascript" src="client/game.client.ui.minimap.js"></script>
 		<script type="text/javascript" src="client/game.client.ui.camera.js"></script>
         <script type="text/javascript" src="client/game.client.hexgrid.js"></script>
+        <script type="text/javascript" src="client/game.client.unit.js"></script>
         <script type="text/javascript" src="client/game.client.sound.js"></script>
 		
         
