--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
 		<!-- Load style sheet -->
 		<link href="index.css" media="screen" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="/lib/flashblock.css">
-		<link href="SpryAssets/SpryAccordion.css" rel="stylesheet" type="text/css">
+		<link href="./lib/SpryAssets/SpryAccordion.css" rel="stylesheet" type="text/css">
         
 		<!-- Library code -->
-        <script type="text/javascript" src="lib/kinetic-v4.3.3.js"></script>
-        <script type="text/javascript" src="lib/soundmanager2.js"></script>
-        <script src="SpryAssets/SpryAccordion.js" type="text/javascript"></script>
-		<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="./lib/kinetic-v4.3.3.js"></script>
+        <script type="text/javascript" src="./lib/soundmanager2.js"></script>
+        <script type="text/javascript" src="./lib/SpryAssets/SpryAccordion.js"></script>
+        <!-- Notice the URL, this is handled by socket.io on the server automatically, via express -->
+		 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
        	<!-- Menu code -->
-		<script type="text/javascript" src="menu.js"></script>
-        <script type="text/javascript" src="client/lobby.client.js"></script>
+		<script type="text/javascript" src="./menu.js"></script>
+        <script type="text/javascript" src="./client/lobby.client.js"></script>
     	<script type="text/javascript">
 		var howToPlay = new Spry.Widget.Accordion("howToPlay");
 		 </script>
     	<!-- Game code -->
-        <script type="text/javascript" src="shared/game.shared.helper.js"></script>
-		<script type="text/javascript" src="shared/game.shared.scenarios.js"></script>
-        <script type="text/javascript" src="shared/game.shared.hexgrid.js"></script>
-		<script type="text/javascript" src="shared/game.shared.unit.js"></script>
-		<script type="text/javascript" src="shared/game.shared.terrain.js"></script>
-        <script type="text/javascript" src="client/game.client.js"></script>
-        <script type="text/javascript" src="client/game.client.ui.js"></script>
-		<script type="text/javascript" src="client/game.client.ui.minimap.js"></script>
-		<script type="text/javascript" src="client/game.client.ui.camera.js"></script>
-        <script type="text/javascript" src="client/game.client.hexgrid.js"></script>
-        <script type="text/javascript" src="client/game.client.unit.js"></script>
-        <script type="text/javascript" src="client/game.client.sound.js"></script>
+        <script type="text/javascript" src="./shared/game.shared.helper.js"></script>
+		<script type="text/javascript" src="./shared/game.shared.scenarios.js"></script>
+        <script type="text/javascript" src="./shared/game.shared.hexgrid.js"></script>
+		<script type="text/javascript" src="./shared/game.shared.unit.js"></script>
+		<script type="text/javascript" src="./shared/game.shared.terrain.js"></script>
+        <script type="text/javascript" src="./client/game.client.js"></script>
+        <script type="text/javascript" src="./client/game.client.ui.js"></script>
+		<script type="text/javascript" src="./client/game.client.ui.minimap.js"></script>
+		<script type="text/javascript" src="./client/game.client.ui.camera.js"></script>
+        <script type="text/javascript" src="./client/game.client.hexgrid.js"></script>
+        <script type="text/javascript" src="./client/game.client.unit.js"></script>
+        <script type="text/javascript" src="./client/game.client.sound.js"></script>
 		
-        
 	</head>
 
 	<body>
